# mpcDrone

./: .gitignore  CMakeLists.txt  README.md
betaflightBridge/: .gitignore  BetaflightData.cpp  BetaflightData.h  README.md  betaflight.h  betaflightBridge  main.cpp  santerinsimulaattori.hpp
src/: main.cpp
src/drone/: Acados.py  controller.cpp  controller.hpp  hardDrone.cpp  hardDrone.hpp
src/raylibGraphics/: raylibGraphics.cpp  raylibGraphics.hpp
src/simulation/: sim.cpp  sim.hpp  simThread.cpp  simThread.hpp
src/utils/: idGenerator.hpp
